--- a/2DWaterPlane/res/layout/activity_main.xml
+++ b/2DWaterPlane/res/layout/activity_main.xml
@@ -5,10 +5,16 @@
     tools:context=".MainActivity" >
 
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:map="http://schemas.android.com/apk/res-auto"
+    
 	  android:id="@+id/map"
 	  android:layout_width="match_parent"
 	  android:layout_height="match_parent"
-	  class="com.google.android.gms.maps.MapFragment"/>
+	  class="com.google.android.gms.maps.MapFragment"
+	  map:cameraTargetLat="40.9749879577"
+      map:cameraTargetLng="-86.1991258479" 
+      map:cameraZoom="14"
+      />
 
 <SeekBar
         android:id="@+id/seekBar"
