--- a/2DWaterPlane/res/layout/activity_main.xml
+++ b/2DWaterPlane/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity" >
 
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
@@ -23,4 +24,4 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true" />
 
-</RelativeLayout>
+</LinearLayout>
