--- a/2DWaterPlane/res/layout/activity_main.xml
+++ b/2DWaterPlane/res/layout/activity_main.xml
@@ -10,17 +10,24 @@
     
 	  android:id="@+id/map"
 	  android:layout_width="match_parent"
-	  android:layout_height="match_parent"
+	  android:layout_height="wrap_content"
+	  android:layout_weight="5"
 	  class="com.google.android.gms.maps.MapFragment"
 	  map:cameraTargetLat="40.9749879577"
       map:cameraTargetLng="-86.1991258479" 
       map:cameraZoom="14"
       />
 
+    <TextView android:id="@+id/text"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Elevation: 42.0m" />
+
 <SeekBar
         android:id="@+id/seekBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:layout_weight="1"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true" />
 
