--- a/2DWaterPlane/res/layout/activity_main.xml
+++ b/2DWaterPlane/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     tools:context=".MainActivity" >
 
+
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:map="http://schemas.android.com/apk/res-auto"
     
@@ -21,7 +22,12 @@
     <TextView android:id="@+id/text"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="Elevation: 42.0m" />
+              android:text="Water Elevation: 42.0m" />
+    
+    <TextView android:id="@+id/text2"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Your Elevation: 42.0m" />
 
 <SeekBar
         android:id="@+id/seekBar"
