--- a/2DWaterPlane/res/menu/activity_main.xml
+++ b/2DWaterPlane/res/menu/activity_main.xml
@@ -5,5 +5,15 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/menu_settings"/>    <item android:id="@+id/item_legal" android:title="@string/menu_legal" android:showAsAction="never"></item>
+        
+            <item android:id="@+id/menu_add"
+          android:icon="@drawable/content_new"
+          android:title="Add Marker"
+          android:showAsAction="ifRoom|withText" />
+            
+                <item android:id="@+id/menu_remove"
+          android:icon="@drawable/content_remove"
+          android:title="Remove Marker"
+          android:showAsAction="ifRoom|withText" />
 
 </menu>
