--- a/2DWaterPlane/res/menu/activity_main.xml
+++ b/2DWaterPlane/res/menu/activity_main.xml
@@ -10,6 +10,22 @@
           android:icon="@drawable/content_new"
           android:title="Add Marker"
           android:showAsAction="ifRoom|withText" />
+
+</menu>
+
+<!--
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <item
+        android:id="@+id/menu_settings"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/menu_settings"/>    <item android:id="@+id/item_legal" android:title="@string/menu_legal" android:showAsAction="never"></item>
+        
+            <item android:id="@+id/menu_add"
+          android:icon="@drawable/content_new"
+          android:title="Add Marker"
+          android:showAsAction="ifRoom|withText" />
             
                 <item android:id="@+id/menu_remove"
           android:icon="@drawable/content_remove"
@@ -17,3 +33,4 @@
           android:showAsAction="ifRoom|withText" />
 
 </menu>
+-->
