--- a/2DWaterPlane/res/layout/custom_ab.xml
+++ b/2DWaterPlane/res/layout/custom_ab.xml
@@ -9,5 +9,11 @@
         android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
         android:text="Delete" />
+    
+    <Button
+        android:id="@+id/buttonOpenDem"
+        android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+        android:text="Open DEM File" />
 
 </LinearLayout>
