fixed initialization of field class static variables in mainactivity

--- a/2DWaterPlane/res/layout/activity_main.xml
+++ b/2DWaterPlane/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
 			  android:layout_width="match_parent"
 			  android:layout_height="wrap_content"
 			  android:layout_weight="5"
-			  class="com.precisionag.waterplane.MyMapFragment"
+			  class="com.precisionag.lib.MyMapFragment"
 			  map:cameraTargetLat="40.9749879577"
 		      map:cameraTargetLng="-86.1991258479" 
 		      map:cameraZoom="14"
