--- a/2DWaterPlane/res/layout/custom_ab.xml
+++ b/2DWaterPlane/res/layout/custom_ab.xml
@@ -2,12 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="right"
+    android:gravity="left"
     android:orientation="horizontal" >
-    
-    <Button
-        android:id="@+id/buttonDeleteMarker"
-        android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"
-        android:text="Delete" />
+
+    <TextView
+            android:text="Waterplane"
+            android:textSize="20dp"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"></TextView>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:gravity="right"
+                  android:orientation="horizontal" >
+
+                <Button
+                    android:id="@+id/buttonDeleteMarker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Delete" />
+        </LinearLayout>
 </LinearLayout>
