--- a/2DWaterPlane/res/xml/preferences.xml
+++ b/2DWaterPlane/res/xml/preferences.xml
@@ -28,6 +28,7 @@
         android:title="Legal Notice"/>
     <Preference
         android:title="Choose DEM Folder">
+        android:key="
         <intent
                 android:action="com.filebrowser.DataPathChooser"/>
     </Preference>
