--- a/2DWaterPlane/res/layout/custom_ab.xml
+++ b/2DWaterPlane/res/layout/custom_ab.xml
@@ -6,6 +6,7 @@
     android:orientation="horizontal" >
 
     <TextView
+            android:id="@+id/appName"
             android:text="Waterplane"
             android:textSize="20dp"
             android:textColor="@color/white"
@@ -19,6 +20,17 @@
                   android:gravity="right"
                   android:orientation="horizontal" >
 
+            <Button
+                    android:id="@+id/buttonHideMarker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hide" />
+
+            <Button
+                    android:id="@+id/buttonShowMarker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Show" />
                 <Button
                     android:id="@+id/buttonDeleteMarker"
                     android:layout_width="wrap_content"
