changed how GPS being disabled is handled, cleaned up some code, changed 'Follow Elevation' text to 'Follow My Elevation'

--- a/2DWaterPlane/res/menu/main_menu.xml
+++ b/2DWaterPlane/res/menu/main_menu.xml
@@ -28,7 +28,7 @@
           android:checked="false"/>
 
     <item android:id="@+id/menu_follow"
-          android:title="Follow Elevation"
+          android:title="Follow My Elevation"
           android:showAsAction="never"
           android:checked="false"/>
 </group>
