--- a/2DWaterPlane/res/layout/activity_intro.xml
+++ b/2DWaterPlane/res/layout/activity_intro.xml
@@ -3,8 +3,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:layout_margin="20dp">
 
+    <TextView
+            android:text="How to use the app:"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            />
     <ImageView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
