--- a/2DWaterPlane/res/menu/main_menu.xml
+++ b/2DWaterPlane/res/menu/main_menu.xml
@@ -42,6 +42,11 @@
           android:title="Add Marker"
           android:showAsAction="always|withText" />
 
+    <item android:id="@+id/menu_line"
+          android:icon="@drawable/line"
+          android:title="Add Marker"
+          android:showAsAction="always|withText" />
+
     <item android:id="@+id/menu_settings"
           android:title="@string/menu_settings"
           android:showAsAction="never" />
