--- a/2DWaterPlane/res/layout/activity_main.xml
+++ b/2DWaterPlane/res/layout/activity_main.xml
@@ -1,13 +1,3 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/TopLevelView"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:focusable="true"
-    android:focusableInTouchMode="true">
-    
 	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
@@ -15,53 +5,49 @@
             android:orientation="vertical"
             tools:context=".MainActivity"
             android:animateLayoutChanges="true">
-
-            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                            android:id="@+id/map"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="5">
                 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                       xmlns:map="http://schemas.android.com/apk/res-auto"
                       android:id="@+id/map"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:layout_weight="5"
+                      android:layout_width="wrap_content"
+                      android:layout_height="0px"
+                      android:layout_weight="2"
                       class="com.waterapps.lib.MyMapFragment"
                       />
-                <ImageView
+
+
+            <ImageView
                     android:id="@+id/graphView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="0px"
+                    android:layout_weight="1"
+                    android:scaleType="fitXY"
                     android:visibility="gone"/>
-                <Button
-                    android:id="@+id/buttonDeleteLine"
-                    android:text="Delete"
-                    android:layout_alignBottom="@id/map"
-                    android:layout_alignRight="@id/map"
-                    android:layout_width="wrap_content"
+            <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/lighter_gray"
-                    android:visibility="gone"/>
+                    android:orientation="horizontal">
+                <Button
+                        android:id="@+id/buttonDeleteLine"
+                        android:text="Delete"
+                        android:layout_alignBottom="@id/map"
+                        android:layout_alignRight="@id/map"
+                        android:layout_width="0px"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@color/lighter_gray"
+                        android:visibility="gone"/>
                 <Button
                         android:id="@+id/buttonShowProfile"
                         android:text="Show Profile of Line"
                         android:layout_alignBottom="@id/map"
                         android:layout_alignLeft="@id/map"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0px"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:background="@color/lighter_gray"
                         android:visibility="gone"/>
-                <Button
-                        android:id="@+id/buttonDrawLine"
-                        android:text="Finished Drawing Line"
-                        android:layout_alignBottom="@id/map"
-                        android:layout_alignRight="@id/map"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/lighter_gray"
-                        android:visibility="gone"/>
-            </RelativeLayout>
+            </LinearLayout>
+
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                           android:id="@+id/elevationControls"
                           android:layout_width="fill_parent"
@@ -175,10 +161,6 @@
                                 android:textAppearance="?android:attr/textAppearanceSmall"
                                 android:id="@+id/editMax"/>
                 </LinearLayout>
-
-
-
-
         </LinearLayout>
 
         <LinearLayout android:id="@+id/markerControls"
@@ -193,4 +175,3 @@
                     />
         </LinearLayout>
 	</LinearLayout>
-</RelativeLayout>
