--- a/2DWaterPlane/res/layout/activity_main.xml
+++ b/2DWaterPlane/res/layout/activity_main.xml
@@ -48,6 +48,22 @@
                         android:visibility="gone"/>
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/dlControls"
+                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:orientation="horizontal"
+                android:visibility="gone">
+                <Button
+                    android:id="@+id/dlButton"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:text="Download"/>
+                <SeekBar
+                    android:id="@+id/sizeBar"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent" />
+                </LinearLayout>
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                           android:id="@+id/elevationControls"
                           android:layout_width="fill_parent"
