--- a/2DWaterPlane/res/layout/activity_main.xml
+++ b/2DWaterPlane/res/layout/activity_main.xml
@@ -12,7 +12,12 @@
                       android:layout_height="0px"
                       android:layout_weight="2"
                       class="com.waterapps.lib.MyMapFragment"
-                      />
+                    tools:layout="@android:layout/simple_gallery_item" />
+            <WebView
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:visibility="gone"
+                android:id="@+id/webview"></WebView>
             <ImageView
                     android:id="@+id/graphView"
                     android:layout_width="match_parent"
