--- a/2DWaterPlane/res/layout/activity_main.xml
+++ b/2DWaterPlane/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
                       android:layout_width="wrap_content"
                       android:layout_height="0px"
                       android:layout_weight="2"
-                      class="com.waterapps.lib.MyMapFragment"
+                      class="com.openatk.openatklib.atkmap.ATKSupportMapFragment"
                       />
             <ImageView
                     android:id="@+id/graphView"
